libs/pavex_cli/tests/ui_tests/singletons_do_not_need_to_be_sync/expectations/stderr.txt
Error: 
  × `app::NonSyncSingleton` does not implement the `core::marker::Sync` trait.
    ╭─[src/lib.rs:18:1]
 18 │ pub fn blueprint() -> AppBlueprint {
 19 │     AppBlueprint::new().constructor(f!(crate::NonSyncSingleton::new), Lifecycle::Singleton)
    ·                                     ────────────────┬───────────────
    ·                                                     ╰── The constructor was registered here
 20 │ }
    ╰────
  help: All singletons must implement the `Send`, `Sync` and `Clone` traits.
         `pavex` runs on a multi-threaded HTTP server and singletons must be
        shared across all worker threads.